<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>es.upm.oeg</groupId>
    <artifactId>oaipmh-analyzer</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <distribution.name>oaipmhanalyzer</distribution.name>
        <assemble.directory>target/generated-resources/appassembler/jsw/${distribution.name}</assemble.directory>
        <!-- Library Versions -->
        <java.version>1.8</java.version>
        <guava.version>18.0</guava.version>
        <lombok.version>1.16.2</lombok.version>
        <mavenappassembler.version>1.9</mavenappassembler.version>
        <mavenassembly.version>2.5.3</mavenassembly.version>
        <mavendeploy.version>2.8.1</mavendeploy.version>
        <mavenjar.version>2.5</mavenjar.version>
        <mavendependency.version>2.5.1</mavendependency.version>
        <mavensource.version>2.4</mavensource.version>
        <oaipmh.version>1.0.4</oaipmh.version>
        <spring.version>4.1.4.RELEASE</spring.version>
        <springboot.version>1.2.1.RELEASE</springboot.version>
    </properties>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </testResource>
            <testResource>
                <directory>src/main/groovy</directory>
                <includes>
                    <include>**</include>
                </includes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${springboot.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${mavendependency.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${mavenjar.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>es.upm.oeg.epnoi.collector.Application</mainClass>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>${mavenappassembler.version}</version>
                <executions>
                    <execution>
                        <id>generate-jsw-scripts</id>
                        <phase>package</phase>
                        <goals>
                            <goal>generate-daemons</goal>
                        </goals>
                        <configuration>
                            <configurationDirectory>config</configurationDirectory>
                            <copyConfigurationDirectory>true</copyConfigurationDirectory>
                            <!--<assembleDirectory>${assemble.directory}</assembleDirectory>-->
                            <repositoryName>lib</repositoryName>
                            <repositoryLayout>flat</repositoryLayout>
                            <!--<preWrapperConf>src/main/resources/pre-wrapper.conf</preWrapperConf>-->
                            <daemons>
                                <daemon>
                                    <id>oaipmhanalyzer</id>
                                    <wrapperMainClass>org.tanukisoftware.wrapper.WrapperSimpleApp</wrapperMainClass>
                                    <mainClass>es.upm.oeg.oaipmh.analyzer.Application</mainClass>
                                    <platforms>
                                        <platform>jsw</platform>
                                    </platforms>
                                    <jvmSettings>
                                        <initialMemorySize>4096M</initialMemorySize>
                                        <maxMemorySize>4096M</maxMemorySize>
                                        <maxStackSize>1024K</maxStackSize>
                                        <systemProperties>
                                            <systemProperty>app.name=pmhanalyzer</systemProperty>
                                            <systemProperty>user.timezone=Etc/GMT</systemProperty>
                                            <systemProperty>sun.jnu.encoding=UTF-8</systemProperty>
                                            <systemProperty>file.encoding=UTF-8</systemProperty>
                                            <systemProperty>user.country=US</systemProperty>
                                            <systemProperty>user.language=en</systemProperty>
                                            <systemProperty>javax.xml.accessExternalDTD=all</systemProperty>
                                        </systemProperties>
                                        <extraArguments>
                                            <extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
                                            <extraArgument>-XX:+CMSClassUnloadingEnabled</extraArgument>
                                            <extraArgument>-XX:MaxPermSize=128M</extraArgument>
                                            <extraArgument>-server</extraArgument>
                                        </extraArguments>
                                    </jvmSettings>
                                    <generatorConfigurations>
                                        <generatorConfiguration>
                                            <generator>jsw</generator>
                                            <includes>
                                                <include>linux-x86-32</include>
                                                <include>linux-x86-64</include>
                                                <include>macosx-universal-64</include>
                                                <include>macosx-universal-32</include>
                                            </includes>
                                            <configuration>
                                                <property>
                                                    <name>configuration.directory.in.classpath.first</name>
                                                    <value>config</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.logfile</name>
                                                    <value>logs/wrapper.log.YYYYMMDD</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.logfile.rollmode</name>
                                                    <value>DATE</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.command</name>
                                                    <value>%JAVA_HOME%/bin/java</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.logfile.maxsize</name>
                                                    <value>100m</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.logfile.maxfiles</name>
                                                    <value>30</value>
                                                </property>
                                            </configuration>
                                        </generatorConfiguration>
                                    </generatorConfigurations>
                                </daemon>
                            </daemons>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${mavenassembly.version}</version>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>attached</goal>
                        </goals>
                        <configuration>
                            <tarLongFileMode>gnu</tarLongFileMode>
                            <descriptors>
                                <descriptor>src/main/assembly/assembly.xml</descriptor>
                            </descriptors>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${mavendeploy.version}</version>
                <configuration>
                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.github</groupId>
                <artifactId>site-maven-plugin</artifactId>
                <version>0.10</version>
                <configuration>
                    <message>${project.name} v${project.version}</message>
                    <noJekyll>true</noJekyll>
                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
                    <branch>refs/heads/mvn-repo</branch>
                    <includes><include>**/*</include></includes>
                    <merge>true</merge>
                    <repositoryName>oaipmh-analyzer</repositoryName>
                    <repositoryOwner>cabadol</repositoryOwner>
                    <server>github</server>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>site</goal>
                        </goals>
                        <phase>deploy</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <!-- Import dependency management from Spring Boot -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <!-- Adds production ready features such as metrics and monitoring -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <version>${springboot.version}</version>
        </dependency>
        <!-- Import Spring Boot’s default logging framework (Logback) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
            <version>${springboot.version}</version>
        </dependency>
        <!-- Sugared annotations -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Camel OAI-PMH Component -->
        <dependency>
            <groupId>es.upm.oeg.camel</groupId>
            <artifactId>camel-oaipmh</artifactId>
            <version>${oaipmh.version}</version>
        </dependency>
        <!-- Google Guava Library -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
    </dependencies>
    <distributionManagement>
        <repository>
            <id>internal.repo</id>
            <name>Temporary Staging Repository</name>
            <url>file://${project.build.directory}/mvn-repo</url>
        </repository>
    </distributionManagement>
    <repositories>
        <!-- GitHub Camel-OAIPMH Repository -->
        <repository>
            <id>camel-oaipmh-mvn-repo</id>
            <url>https://raw.github.com/cabadol/camel-oaipmh/mvn-repo/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>
</project>